@@ -1,4 +1,4 @@
 DIST GR-lida-0.6.0.tar.bz2 413770 RMD160 e01d5c87fe363ecf7978704de7cbdfc1edf793b3 SHA1 a70624a2007a1ef6a2206b3a3837317350804ddd SHA256 327b7c685a23ad489fa67d8af1cce0da18abee7e1b01909aefa96ed42acf1689
 EBUILD gr-lida-0.6.0.ebuild 905 RMD160 9b14d1d7c728be69ffbf2f8563f05c92c0fefbdb SHA1 f61303f61e6e7fc375b230a25a4d163fa1d7f673 SHA256 8f079c23a6d5dedaaf0c01162db00b0483e9f8b1cac941ba8fbb283871c32e8b
-MISC ChangeLog 1733 RMD160 7f0cfd9f80e11a11f557e4da84c16c5a1c0582b8 SHA1 95c1aedc129586b05ef687e6f754cd71874c6af8 SHA256 64c258952e194759546096c282c9e0c36cc9da16ba278479623697a78da38580
-MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
+MISC ChangeLog 1854 RMD160 72bb6794f9e3697badf9c031f1b8f2ecbcfd9d24 SHA1 d0ad1731aec3c063a9fc9a67dff63cdd22214b5c SHA256 2504e43fda8b990033686d3c87290e8c2b2c26cc9c17c2db3c8c2816f7c84cc0
+MISC metadata.xml 320 RMD160 21897d4edfedc4d652fd2c5a936c6a38e11bcdd1 SHA1 8ce406cd44dcadd2a66006f12047d0b1310000ce SHA256 897fd767bb37f5edd20d1e4500613941f17d0348d4c45ad471a9ac9e74de98d4
